<resources>
    <string name="app_name">MealMate</string>
    <string name="submit">Submit</string>
    <string name="Home">Home</string>
    <string name="About">About</string>
    <string name="Contact">Contact</string>
    <string name="Share">Share</string>
    <string name="Setting">Setting</string>
    <string name="MealMate">Meal Mate</string>
    <string name="meal_mate">Meal Mate</string>
    <string name="about">About</string>
    <string name="forgotpassword">ForgotPassword</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="recipes">Recipes</string>
    <string name="signup">Signup</string>
    <string name="authentication">Authentication</string>
    <string name="weeks">Weeks</string>
    <string name="grocery">Grocery</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="recycler_view_description">List of grocery items</string>
    <string name="mealmate">Meal Mate</string>
    <string name="order_list_description">description</string>
    <string name="notification_icon_description">Notification Description</string>
    <string name="search_icon_description">Search</string>
    <string name="menu_icon_description">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen1">Upload a Video</string>
    <string name="screen2">Create a Short</string>
    <string name="screen3">Go Live</string>
    <string name="screen1desc">Record a new video or select a video you already have on your phone.
        Watch YouTube Videos for Free</string>
    <string name="screen2desc">Create, edit, and upload your own short videos.
        All you need is an idea and a phone to record and share Shorts. </string>
    <string name="screen3desc">YouTube live streaming allows you to reach your community in real time.
    Go live on YouTube from webcam, mobile and encoder streaming.</string>
    <string name="startDesc">Create a long video or shorts and upload on youtube. Interact with your subscribers on youtube live.</string>

    <string name="grocery_image_description">Image</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="grocery_price">$Price</string>
    <string name="grocery_description">Description</string>
    <string name="grocery_location">Location</string>
    <string name="btn_delete">Delete</string>
    <string name="location_not_selected">Location: Not Selected</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="choose_location_from_map">Choose Location from Map</string>
    <string name="save">Save</string>
    <string name="select_image">Select Image</string>
    <string name="location">Location</string>
    <string name="explore_youtube">Explore YouTube</string>
    <string name="get_started">Get Started</string>
    <string name="todo">Grocery</string>
    <string name="add_grocery">Add Grocery</string>
    <string name="add_a_new_grocery_item">Add a new grocery item</string>
    <string name="list_of_groceries">List of groceries</string>
    <string name="home_screen">Home Screen</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="groceries_rice_beans">Groceries: Rice, Beans</string>
    <string name="week_1">Week: 1</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="select_location">Select Location</string>
    <string name="add_recipe">Add Recipe</string>

</resources>