<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item android:id="@+id/about_menu"
        android:title="@string/about"
        android:icon="@drawable/about"/>
    <item android:id="@+id/week_menu"
        android:title="@string/weeks"
        android:icon="@drawable/calendar"/>
    <item android:id="@+id/recipe_menu"
        android:title="@string/recipes"
        android:icon="@drawable/calendar"/>
    <item android:id="@+id/grocery_menu"
        android:title="@string/grocery"
        android:icon="@drawable/calendar"/>
    <item
        android:id="@+id/subitems"
        android:title="@string/authentication">
        <menu>
            <item android:id="@+id/signup_menu"
                android:title="@string/signup"
                android:icon="@drawable/signup"/>
            <item android:id="@+id/login_menu"
                android:title="@string/login"
                android:icon="@drawable/login"/>
            <item android:id="@+id/forgetpassword_menu"
                android:title="@string/forgotpassword"
                android:icon="@drawable/reset_password"/>
        </menu>
    </item>
</menu>
