<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">
    <ImageView
        android:id="@+id/ivGroceryImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnChooseImage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/select_image"/>


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/grocery_name"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/description"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location_not_selected"
        android:textStyle="bold"
        android:padding="8dp"/>
    <Button
        android:id="@+id/btnChooseLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/choose_location_from_map"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        android:layout_marginTop="16dp"/>
</LinearLayout>