<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#C7C5D59A"
    app:flow_horizontalAlign="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/sliderImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="15dp"
        android:src="@drawable/start"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/explore_youtube"
        android:textAlignment="center"
        android:textColor="#08383C"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/startDesc"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#060F2C"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/get_started"
        android:padding="8dp"
        android:backgroundTint="#000000"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:cornerRadius = "12dp"/>

</LinearLayout>