<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".AddRecipe">

    <!-- ImageView for the picture -->
    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginBottom="20dp"/>

    <!-- EditText for name -->
    <EditText
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/enter_name"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <!-- EditText for description -->
    <EditText
        android:id="@+id/recipe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <!-- Dropdown for week selection -->
    <Spinner
        android:id="@+id/spinner_week"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"/>

    <!-- Dropdown for ingredients selection -->
    <Spinner
        android:id="@+id/spinner_ingredients"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"/>

    <!-- Button to Submit -->
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/submit"
        android:textSize="50dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>